Moved home css into its own file. Styled portfolio pagers

--- a/src/scss/_bootstrap-customizations.scss
+++ b/src/scss/_bootstrap-customizations.scss
@@ -7,3 +7,9 @@
     margin-left: 0;
     margin-right: 0;
 }
+
+.row.no-gutter > [class^="col-"],
+.row.no-gutter > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
