--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,4 +32,5 @@ Domain Path: #{metadata(theme-text-domain-path)}
 @import "theme-overrides";
 @import "bootstrap-customizations";
 @import "header";
+@import "home";
 @import "portfolio";
