--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -53,14 +53,19 @@
 }
 
 .portfolio--item-subtitle {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 28px;
     line-height: 28px;
+    font-weight: bold;
+    font-style: italic;
     margin-bottom: 8px; // Space below when stacked above description
 }
 
 .portfolio--item-description {
     font-size: 22px;
-    font-family: serif;
     line-height: 24px;
+}
+
+.portfolio--recent-work {
+    max-width:1155px; // Max-width of portfolio images;
+    text-align: right;
 }
