--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -8,7 +8,7 @@
     }
 }
 
-@media (max-width: 999px) {
+@media (max-width: $tablet-max-width) {
     .home--section-excerpt {
         padding: 10px 40px;
     }
@@ -29,7 +29,7 @@
     padding-bottom: 40px;
 }
 
-@media (max-width: 690px) {
+@media (max-width: $mobile-max-width) {
     .home--section-lead-in {
         padding: 27px 27px 27px 27px;
         font-size: 32px;
@@ -38,7 +38,7 @@
     }
 
     .home--section-excerpt {
-        font-size: 22px !important;
+        font-size: 20px !important;
         line-height: 32px !important;
     }
 }
@@ -47,7 +47,7 @@
     text-align: center;
     padding-bottom: 32px;
     h2 {
-        font-family: 'Source Sans Pro', sans-serif;
+        @include sans-serif;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: bold;
@@ -127,6 +127,12 @@ div.portfolio-grid-thumbnail:hover {
 ul.capabilities-list {
     font-size: 24px;
     line-height: 34px;
+}
+@media (max-width: $mobile-max-width) {
+    ul.capabilities-list {
+        font-size: 20px;
+        line-height: 30px;
+    }
 }
 
 li.capabilities-header {
