--- a/src/scss/_theme-overrides.scss
+++ b/src/scss/_theme-overrides.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Tiempos Text Regular", "Crimson Text", Verdana, sans-serif;
+    @include serif;
 }
 
 .home #page-header-bg {
