--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -119,6 +119,12 @@ div.portfolio-grid-thumbnail:hover {
     }
 }
 
+// Clients
+.homepage--client-logo {
+    background-size: contain;
+}
+
+
 
 ul.capabilities-list {
     font-size: 24px;
@@ -152,6 +158,7 @@ li.capabilities-header {
         width: 100%;
         background-size: cover;
     }
+
 
     .article-title {
         font-weight: bold;
