Styling updates for woocommerce templates. Added font awesome mixins. Replaced salient's lock icon with shopping cart icon.

--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -14,10 +14,17 @@ header#top nav > ul > li.menu-item > a {
     }
 }
 
+header#top #mobile-cart-link {
+    text-align: left;
+
+    i {
+        font-size: 28px !important;
+    }
+}
+
 header#top #toggle-nav i {
     font-size: 28px !important;
 }
-
 
 #mobile-menu ul li.menu-item a {
     @include sans-serif;
