Updated style rules for coloring about section bg to not reference boxed layout ids. Moved boxed layout specific css rules to their own unused scss file

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@ Domain Path: #{metadata(theme-text-domain-path)}
 
 @import "breakpoints";
 @import "theme-overrides";
+// @import "boxed-overrides"; // Not currently using boxed layout
 @import "bootstrap-customizations";
 @import "header";
 @import "menu";
