matched portfolio client name to menu styling

--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -29,8 +29,8 @@
 .portfolio--title--mobile {
     text-align: center;
     text-transform: uppercase;
-    @include sans-serif;
-    font-size: 30px !important;
+    @include sans-serif-bold;
+    font-size: 14px !important;
 }
 
 #portfolio-nav.portfolio-nav--desktop {
@@ -42,7 +42,7 @@
     }
 
     .portfolio--title {
-        font-size: 32px;
+        font-size: 14px;
     }
 
     .portfolio-nav--prev-next {
@@ -53,7 +53,8 @@
 .portfolio--title {
     text-align: center;
     text-transform: uppercase;
-    @include sans-serif;
+    @include sans-serif-bold;
+    letter-spacing: 2.5px;
 }
 
 .portfolio--item-subtitle {
