--- a/src/scss/_blog.scss
+++ b/src/scss/_blog.scss
@@ -6,6 +6,8 @@
 .single-post {
 
     .heading-title h1.entry-title {
+        @include sans-serif-bold;
+        font-size: 40px;
         margin-bottom: 10px;
     }
 
