updated contact page with featured image and newsletter signup form styling

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,6 +1,8 @@
 // ==== CONFIGURATION ==== //
 
-// Set all your configuration variables here!
+// Colors
+$pink: #b53468;
+$tan: #F3EEE8;
 
 // Width of the overall site as well as the left and right content columns
 //$width-site:    1000px;
