--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -2,7 +2,7 @@
     background-color: white;
 
     .about-container {
-        background-color: #F3EEE8;
+        background-color: $tan;
     }
 }
 
