--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,7 @@ Domain Path: #{metadata(theme-text-domain-path)}
 @import "pagination";
 
 // Pages
+@import "contact";
 @import "home";
 @import "portfolio";
 @import "articles";
