--- a/src/scss/_articles.scss
+++ b/src/scss/_articles.scss
@@ -8,7 +8,7 @@
 
 
     .article-title {
-        font-weight: bold;
+        @include serif-bold;
         font-size: 28px;
     }
 
@@ -17,7 +17,7 @@
     }
 
     .article-source {
-        font-style: italic;
+        @include serif-italic;
     }
 
 
