Created scss variable for container padding and doubled the current value

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -7,6 +7,8 @@
 //$width-left:    650px;
 //$width-right:   350px;
 
+$container-padding: 80px;
+
 // Breakpoints (TODO - figure out if these are still used)
 // $break-small:   480px;
 // $break-medium:  620px;
