--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -64,6 +64,12 @@
         padding-bottom: 0;
         margin-bottom: 0;
     }
+
+    .collapsible-more-link {
+        @include sans-serif-bold;
+        text-transform: uppercase;
+        font-size: 18px;
+    }
 }
 
 .section-content {
