--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -71,7 +71,8 @@
 
 .portfolio--item-description {
     font-size: 22px;
-    line-height: 24px;
+    line-height: 28px;
+    margin-top: -4px; // Line top up with portfolio--item-subtitle
 }
 @media (max-width: $mobile-max-width) {
     .portfolio--item-description {
