--- a/src/scss/_blog.scss
+++ b/src/scss/_blog.scss
@@ -13,6 +13,10 @@
 
     article {
         max-width: 640px;
+
+        strong {
+            @include serif-bold;
+        }
     }
 
     .post-content p {
