Added footer template override and footer styles to create horizontal menu in footer

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,6 +1,9 @@
 // ==== CONFIGURATION ==== //
 
 // Set all your configuration variables here!
+$black: #000;
+$gray: #777;
+$tan: #f3eee8;
 
 // Width of the overall site as well as the left and right content columns
 //$width-site:    1000px;
