--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,7 @@ Domain Path: #{metadata(theme-text-domain-path)}
 // Components
 @import "header";
 @import "pagination";
+@import "footer";
 
 // Pages
 @import "home";
