--- a/src/scss/_breakpoints.scss
+++ b/src/scss/_breakpoints.scss
@@ -2,3 +2,5 @@ $mobile-max-width: '690px';
 $tablet-min-width: '691px';
 $tablet-max-width: '1000px';
 $desktop-min-width: '1001px';
+
+$mobile-menu-max-width: '768px';
