Corrected mobile menu scss value. Added space below portfolio lead in text. Added link class for styling links in portfolio text

--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -57,6 +57,10 @@
     letter-spacing: 2.5px;
 }
 
+.portfolio--subtitle-excerpt-row {
+    margin-bottom: 24px;
+}
+
 .portfolio--item-subtitle {
     font-size: 28px;
     line-height: 28px;
