--- a/src/scss/_theme-overrides.scss
+++ b/src/scss/_theme-overrides.scss
@@ -45,3 +45,8 @@ blockquote {
     @include serif;
     line-height: 140%;
 }
+
+a.styled-link {
+    @include sans-serif-bold;
+    text-transform: uppercase;
+}
