--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -5,6 +5,7 @@ $black: #000;
 $white: #fff;
 $gray: #777;
 $tan: #f3eee8;
+$pink: #b53468;
 
 // Width of the overall site as well as the left and right content columns
 //$width-site:    1000px;
