--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -34,6 +34,19 @@ header#top #toggle-nav i {
     font-size: 28px !important;
 }
 
+ul.sf-menu {
+
+    li a:hover,
+    li a:focus {
+        text-decoration: none;
+        &::after {
+            content: '';
+            display: block;
+            border-bottom: solid 2px $pink;
+        }
+    }
+}
+
 
 /*
     MOBILE
