--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,137 +1,142 @@
-div#header-outer {
-    box-shadow: none;
-    -webkit-box-shadow: none;
+.header-wrapper {
+    z-index: 10000;
 }
-
-@media only screen and (min-width: $desktop-min-width) {
-    header#top {
-        .row {
-            padding-bottom: 4px;
-
-            #logo {
-                padding-left: 40px;
-            }
-        }
-    }
-}
-
-header#top nav > ul {
-    float: right;
-}
-
-header#top nav > ul > li.menu-item > a {
-    @include sans-serif-bold;
-    font-size: 14px;
-    letter-spacing: 2.5px;
-    color: black !important;
-    text-transform: uppercase;
-
-    &:hover {
-    }
-}
-
-header#top #toggle-nav i {
-    font-size: 28px !important;
-}
-
-ul.sf-menu {
-
-    li a:hover,
-    li a:focus {
-        text-decoration: none;
-        &::after {
-            content: '';
-            display: block;
-            border-bottom: solid 2px $pink;
-            margin-right: 2.5px; // Negate extra space after last letter in menu item caused by letter-spacing
-        }
-    }
-}
-
-
-/*
-    MOBILE
-*/
-// push content below fixed header on mobile
-@media only screen and (max-width: $mobile-menu-max-width) {
-    #ajax-content-wrap {
-        margin-top: 40px;
-    }
-}
-
-/* Mobile header (headroom.js) */
-@media only screen and (max-width: $tablet-max-width) {
-    header#top {
-        padding: 10px 12px;
-
-        .row {
-            padding-bottom: 0;
-        }
-    }
-
-    body header#top a#logo {
-        margin-top: 0 !important;
-    }
-
-    body header#top a#logo img.retina-logo,
-    body header#top a#logo img.default-logo {
-        height: 20px !important;
-        margin-top: 0 !important;
-        top: 0 !important;
-    }
-
-    header#top.headroom {
+@media (max-width: $mobile-max-width) {
+    .header-wrapper {
         position: fixed;
         top: 0;
-        will-change: transform;
-        transition: transform 200ms linear;
-        background-color: #fff;
-    }
-    header#top.headroom--pinned {
-        transform: translateY(0%);
-    }
-    header#top.headroom--unpinned {
-        transform: translateY(-100%);
+        left: 0;
+
+        width: 100%;
     }
 }
 
+header {
+    position: fixed;
+    z-index: 10000 !important;
+
+    @media (max-width: $mobile-max-width) {
+        display: flex;
+        justify-content: space-between;
+
+        width: 100%;
+        background-color: rgba(255,255,255,.9);
+    }
+}
+
+.header-logo__container {
+    position: relative;
+    img {
+        transform: rotate(-90deg);
+        position: absolute;
+        width: 200px;
+        margin-top: 126px;
+        margin-left: -64px;
+    }
+
+    @media (max-width: $mobile-max-width) {
+        img {
+            position: relative;
+
+            transform: none;
+            width: 140px;
+            margin: 20px 20px 0 0;
+        }
+    }
+}
+
+
+
+.nav-toggle>input:checked + .nav-flyout {
+    display: flex;
+}
 
 // Hamburger menu icon
-header#top #toggle-nav {
-    position: relative;
-    top: 0;
-    text-align: right;
-    margin-bottom: 0;
-    width: auto;
+.nav-toggle {
+
+    display: inline-block;
+    margin: 18px 0 0 20px;
+
+    @media (max-width: $mobile-max-width) {
+        margin: 10px 0 10px 20px;
+    }
 
     i {
-        line-height: 26px;
+        position: relative;
+        z-index: 1;
+
+        font-size: 36px;
+        line-height: 36px;
+
+        color: black;
+        background-color: transparent !important;
+        cursor: pointer;
     }
 }
-header#top #toggle-nav:hover {
+.nav-toggle:hover {
     text-decoration: none !important;
 }
+.nav-toggle--icon-show {
+    display: block;
+}
+.nav-toggle--icon--hide {
+    display: none;
+}
 
+ul.nav-flyout {
+    position: absolute;
+    top: 0;
+    left: 0;
 
-#mobile-menu {
-    background-color: #fff;
+    width: 100vw;
+    height: 100vh;
 
-    ul li.menu-item a {
+    margin: 0;
+    padding: 0;
+    list-style: none none;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(255,255,255,.9);
+
+    display: none;
+    &.animated {
+        display: flex !important; // Don't set display if javascript is active
+    }
+
+    li {
+        padding: 2vh 0;
+    }
+
+    li.menu-item a {
         color: #000 !important;
-        border-bottom: 1px dotted #000 !important;
+
         @include sans-serif-bold;
         text-transform: uppercase;
         font-size: 16px;
+        text-decoration: none;
     }
 
-    ul li.menu-item a:hover {
-        text-decoration: none !important;
+    li.menu-item a:hover {
+        border-bottom: 2px solid #000;
     }
 }
 
-#mobile-menu ul li:last-child {
+.nav-flyout ul li:last-child {
     padding-bottom: 0 !important;
     a {
         border-bottom: none !important;
     }
+}
+
+.menu-up {
+    transition: .4s ease-in-out;
+    transform: translate(0, -100px);
+}
+
+.menu-down {
+    transition: .4s ease-in-out;
+    transform: translate(0, 0);
 }
