--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -261,25 +261,16 @@ div.portfolio-grid-thumbnail:hover {
 
 
 
-ul.capabilities-list {
-    font-size: 24px;
-    line-height: 34px;
+.capabilities-text {
+    font-size: 18px;
 }
 @media (max-width: $mobile-max-width) {
-    ul.capabilities-list {
-        font-size: 20px;
-        line-height: 30px;
+    .capabilities-text {
+        font-size: 18px;
     }
 }
-
-li.capabilities-header {
-    @include serif-bold;
-}
-
-@media (max-width: 767px) {
-    ul.capabilities-list {
-        text-align: center;
-    }
+.capabilities-header {
+    @include sans-serif-bold;
 }
 
 
